// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductsList /> should render correctly on GRID view 1`] = `
<div>
  <div
    className="ProductsList-container"
  >
    <ProductCard
      productId={1}
    />
    <ProductCard
      productId={2}
    />
  </div>
</div>
`;

exports[`<ProductsList /> should render correctly on LIST view 1`] = `
<div>
  <div
    className="ProductsList-container"
  >
    <ProductItem
      index={0}
      productId={1}
    />
    <ProductItem
      index={1}
      productId={2}
    />
  </div>
</div>
`;
